--- a/css/main.css
+++ b/css/main.css
@@ -2,35 +2,37 @@
   STYLE GUIDE STYLING 
   Default styling for the style guide 
 */
-h1{
-  font-family: "ZnikomitSC", monospace;
-  text-align: center;
-  color: #400000;
-  outline-color: #400000;
-  outline-style: solid;
-  outline-width: 0.1em;
-  background-color: #FFF;
-}
-h2{
-  color:#400000;
-  font-family: "ZnikomitSC", monospace;
-}
-
-h3,h4{
-color: black;
-margin-left:1em;
-font-family: "ZNIKOMIT", monospace;
-}
-
 body {
-  font-family: sans-serif;
-  margin-left: 2em;
+
+  font-family: "Roboto", "Lato", sans-serif;
+  padding: 2rem;
 }
+
+div {
+  display: block;
+}
+
+[class^='grid-col-'] {
+    float: left;
+    padding: 0;
+}
+
+.grid-col-3of10 {
+  width: 100%;
+}
+.grid-col-7of10{
+  width:100%;
+  }
 
 section:not([id]) {
-  margin: 0.5em 0;
-  padding: 0.5em 0;
-  border-bottom: 0.1em solid #A8A8A8;
+  margin: 1em 0;
+  padding: 1em 0;
+  border-bottom: 0.15em solid #333;
+}
+
+section h2 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
 }
 
 section h3 {
@@ -39,6 +41,14 @@ section h3 {
 
 section p {
   margin-top: 0;
+}
+
+nav {
+  font-family: "Lato", sans-serif;
+  display: block;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
+
 }
 
 nav a:hover, nav a:focus {
@@ -51,9 +61,73 @@ section code {
   display: block;
 }
 
-form{
-  font-family: "ZNIKOMIT", monospace;
-  margin-left: 2em;
+ul.citations {
+  margin-left: 0.25em;
+  padding-left: 0.25em;
+}
+
+ul.citations li {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+  padding-bottom: 1em;
+}
+
+ul.citations li strong {
+  font-weight: normal;
+  font-style: italic;
+}
+
+cite {
+  font-style: normal;
+}
+
+*, *:after, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.grid:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+
+@media (min-width: 800px) {
+.grid-col-3of10 {
+    width: 30%;
+}
+}
+
+
+@media (min-width: 800px) {
+.grid-col-7of10 {
+    width: 70%;
+}
+}
+
+ul, li, a {
+  /*list-style-type: disc;*/
+  padding:0.4em;
+  color: black;
+}
+
+.links a {
+  color: black;
+  text-decoration: none;
+}
+
+.links a:hover {
+  color: #e4c374;
+  font-weight: bold;
+}
+
+img {
+
+  height: auto; 
+  max-width: 100%;
 }
 
 /* 
@@ -61,283 +135,148 @@ form{
 */
 
 /* Styling for the navigation button */
- 
-
-.button-submit {
-  font-family: "ZNIKOMIT", monospace;
+.button-nav {
   display: inline-block;
-  padding: 6px;
-  outline-color: #E8E8E8 ;
-  outline-style: solid;
-  outline-width: 1px;
-  background-color: #FFF;
-  color: #303030;
-  border-radius: 0.15em;
+  padding: 0.5em 0.75em;
+  color: #e4c374;
+  border-color: #e4c374;
+  border-style: solid;
+  background-color: white;
+  border-radius: 0.25em;
+  font-weight: bold;
   text-decoration: none;
-  margin-left: 2em;
-  width: 80px;
-  text-align: center;
   -webkit-transition: background-color 0.5s ease-out;
   transition: background-color 0.5s ease-out;
 }
 
-.button-submit:hover, .button-nav:focus {
-  background-color: #FFF;
-  color: #C8C8C8 ;
+.button-nav:hover, .button-nav:focus {
+  background-color: #e4c374;
+  color: white;
 }
 
-
-.button-reset {
-  font-family: "ZNIKOMIT", monospace;
+.links {
   display: inline-block;
-  padding: 6px;
-  outline-color: #E8E8E8 ;
-  outline-style: solid;
-  outline-width: 1px;
-  background-color: #FFF;
-  color: #303030;
-  border-radius: 0.1em;
+  padding: 1em;
+  color: black;
+  font-weight: bold;
   text-decoration: none;
-  margin-left: 0.5em;
-  width: 80px;
-  text-align: center;
   -webkit-transition: background-color 0.5s ease-out;
   transition: background-color 0.5s ease-out;
 }
-.button-reset:hover, .button-nav:focus {
-  background-color: #FFF;
-  color: #C8C8C8 ;
+
+.links:hover, .links:focus {
+  color: #e4c374;
 }
 
+.confirm-button {
+  display: inline-block;
+  padding: 0.5em 0.75em;
+  color: #e4c374;
+  border-color: #e4c374;
+  border-style: solid;
+  background-color: white;
+  border-radius: 0.25em;
+  font-weight: bold;
+  text-decoration: none;
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
 
+}
 
+.confirm-button:hover, .confirm-button:focus {
+  background-color: #e4c374;
+  color: white;
 
+}
+
+.form, input {
+  padding:0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
 
 /* 
   TEXT ELEMENTS -------------------
 */
-.link:link {
-    color: #A0A0A0;
-}
 
-.link:hover {
-    color: grey;
-}
-.link:visited {
-    color: #99CCCC;
-}
+.headings1 {
+  display: inline-block;
+  padding: 0.5em 0.5em;
+  color: #4B4B4B;
 
-
-
-
-#Heading1{
-    color: #303030;
-    width: 120px;
-    padding: 5px;
-    border: 1.5px solid #303030;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 2em;
-    font-family: "ZNIKOMIT", monospace;
-    text-align: center;
-    font-size: 1.3em;
-    
-}
-#Heading2{
-    color: grey;
-    width: 110px;
-    padding: 4px;
-    border: 1.5px solid grey;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 2.5em;
-    font-family: "ZNIKOMIT", monospace;
-    text-align: center;
-    font-size: 1.2em;
-}
-#Heading3{
-    width: 100px;
-    padding: 4px;
-    border: 1px solid grey;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 3em;
-    font-family: "ZNIKOMIT", monospace;
-    text-align: center;
-}
-#Heading4{
-    width: 100px;
-    padding: 4px;
-    border: 1px solid grey;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 3em;
-    font-family: "ZNIKOMIT", monospace;
-    text-align: center;
-    text-transform: lowercase;
-}
-
-p{
-    font-family: "ZNIKOMIT", monospace;
-    margin-left: 2em;
-    margin-right: 2em;
-
-  }
-#paragraph{
-}
-
-ul{
-    font-family: "ZNIKOMIT", monospace;
-    list-style-type: square;
-}
-ol{
-    font-family: "ZNIKOMIT", monospace;
-    margin-left: 1em;
-}
-.main-nav:active, .main-nav:focus{
-    background-color: white;
-    color: grey;
-   }
- .nav-bar{
-    font-family: "ZNIKOMIT", monospace;
-    display: block;
-    text-align: center;
-    font-size: 1.2em;
-    padding: 9px;
-    background-color: #E8E8E8  ;
-    color: #303030;
-    width: 400px;
-   
-    border-radius: 0.15em;
-    margin-left: 0.8em;
-    text-decoration: none;
-
-}
-
-.nav-li{
-  float: left;
-}
-.nav-ul{
- list-style-type: none;
- margin: 0;
- padding: 0;
- overflow: hidden;
-
-}
-.nav-bar:hover{
- color: #A8A8A8;
- background-color: white;
- outline-color: #A8A8A8;
- outline-style:solid;
-}
-
-
-img{
-  margin-left: 2em;
-}
-#darkRed{
-  background-color: #600000 ;
-  color: #FFF;
-  width: 100px;
-  padding: 15px;
-  margin-left: 2em;
-  margin-top: 0.5em;
-}
-#darkGrey{
-  background-color: #303030 ;
-  color: #FFF;
-  width: 100px;
-  padding: 15px;
-  margin-left: 2em;
-  margin-top: 0.5em;
-}
-#lightGrey{
-  background-color: #E8E8E8  ;
-  color: #FFF;
-  width: 100px;
-  height: 30px;
-  padding: 15px;
-  margin-left: 2em;
-  margin-top: 0.5em;
-}
-#white{
-  background-color: #FFF;
-  color: grey;
-  width: 96px;
-  padding: 15px;
-  outline-color:#E8E8E8;
-  outline-style: solid;
-  outline-width: 1px;
-  margin-left: 2em;
-  margin-top: 0.5em;
-}
-#grid-a{
-  width:100%;
-  margin-left: 2em;
-  margin-right:1.5em;
-  padding:15px;
-  margin-bottom: 1.5em;
-  background-color: #E8E8E8;
-  display: block;
-
-}
-#grid-b{
+  font-size: 2em;
+  font-weight: bold;
   text-decoration: none;
-  float:left;
-  width:350px;
-  height: 600px;
-  margin-left: 2em;
-  margin-right:1.5em;
-  padding:15px;
-  margin-bottom: 1.5em;
-  background-color: #E8E8E8;
-  display: block;
 
 }
 
-
-#grid-c{
+.headings2 {
+  display: inline-block;
+  padding: 0.5em 0.5em;
+  color: #4B4B4B;
+  font-size: 1.5em;
+  font-weight: bold;
   text-decoration: none;
-  float: left;
-  width:410px;
-  height: 600px;
-  margin-left: 0.5em;
-  margin-right:1.5em;
-  padding:15px;
-  margin-bottom: 1.5em;
-  background-color: #E8E8E8;
-  display: block;
-
 }
-#grid-d{
+
+.headings3 {
+  display: inline-block;
+  padding: 0.5em 0.5em;
+  color: #4B4B4B;
+  font-size: 1em;
+  font-weight: bold;
   text-decoration: none;
-  float:right;
-  width:350px;
-  height: 600px;
-  margin-left: 0.5em;
-  margin-right:1.5em;
-  padding:15px;
-  margin-bottom: 1.5em;
-  background-color: #E8E8E8;
-  display: block;
 }
 
-#grid-e{
-  width:100%;
-  margin-left: 2em;
-  margin-right:1.5em;
-  margin-top:42em;
-  padding:10px;
-  margin-bottom: 1.5em;
-  background-color: #E8E8E8;
-  display: block;
+.paragraphs {
+  font-family:'Lato',sans-serif;
+  font-size: 1em;
+  text-decoration: none;
+}
 
-
+.bulleted-lists{
+  text-decoration: none;
+  color:#e4c374;
+  font-size: 1em;
 }
 
 
+.bulleted-lists:hover {
+  text-decoration: underline;
+  font-weight: bold;
+  font-size: 1.2em;
+}
 
+.numbered-lists{
+  /*list-style-type: decimal;*/
+  text-decoration: none;
+}
+
+.numbered-lists:hover {
+  font-weight: bold;
+  color: #e4c374;
+  font-size: 1.1em;
+}
 
 /* 
   COMBINED ELEMENTS -------------------
 */
+.selected {
+  display: block;
+  padding: 2em;
+  color:white;
+  background-color: black;
+  text-decoration: none;
+  font-weight: bold;
+
+
+}
+
+.selected:hover, .selected:focus {
+  color:#e4c374;
+}
+
+
+
+
+
