--- a/css/main.css
+++ b/css/main.css
@@ -108,18 +108,14 @@ cite {
 }
 }
 
-ul, li, a {
-  /*list-style-type: disc;*/
-  padding:0.4em;
-  color: black;
-}
 
-.links a {
+
+.button a {
   color: black;
   text-decoration: none;
 }
 
-.links a:hover {
+.button a:hover {
   color: #e4c374;
   font-weight: bold;
 }
@@ -155,21 +151,32 @@ img {
   color: #eb555a;
 }
 
-.links {
+.button {
   display: inline-block;
   padding: 1em;
   color: white;
-  background-color: black;
+ 
   border-radius: 0.25em;
   font-weight: bold;
   text-decoration: none;
   -webkit-transition: background-color 0.5s ease-out;
   transition: background-color 0.5s ease-out;
 }
-
-.links:hover, .links:focus {
+.button:hover, .button:focus {
   color: #eb555a;
 }
+
+
+.link:link {
+    color: #3d3636;
+}
+
+.link:visited {
+    color: #eb555a;
+}
+
+
+
 
 .confirm-button {
   display: inline-block;
@@ -238,28 +245,39 @@ img {
 }
 
 .bulleted-lists{
+ color:black;
+  list-style-type: square;
+  padding:0.4em;
+
+
   text-decoration: none;
-  color:black;
+ 
   font-size: 1em;
+ 
+
+
 }
 
 
 .bulleted-lists:hover {
-  text-decoration: underline;
+  
   color:#eb555a;
   font-weight: bold;
-  font-size: 1.2em;
+
+
+
 }
 
 .numbered-lists{
-  /*list-style-type: decimal;*/
+  list-style-type: none;
   text-decoration: none;
+
 }
 
 .numbered-lists:hover {
   font-weight: bold;
   color: #eb555a;
-  font-size: 1.1em;
+ 
 }
 
 /* 
